--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -159,7 +159,7 @@ nobase_include_HEADERS = es.h es/apply.h es/broker.h es/classFactory.h \
 	es/types.h es/usage.h es/utf.h es/uuid.h es/net/arp.h \
 	es/net/dhcp.h es/net/dns.h es/net/dix.h es/net/icmp.h \
 	es/net/igmp.h es/net/inet4.h es/net/inet6.h es/net/tcp.h \
-	es/net/udp.h es/variant.h es/base/IAlarm.idl \
+	es/net/udp.h es/variant.h es/orderedMap.h es/base/IAlarm.idl \
 	es/base/ICache.idl es/base/ICallback.idl \
 	es/base/IClassFactory.idl es/base/IClassStore.idl \
 	es/base/IFile.idl es/base/IInterface.idl \
@@ -177,7 +177,8 @@ nobase_include_HEADERS = es.h es/apply.h es/broker.h es/classFactory.h \
 	es/naming/IBinding.idl es/naming/IContext.idl \
 	es/net/IInternetAddress.idl es/net/IInternetConfig.idl \
 	es/net/IResolver.idl es/net/ISocket.idl es/util/IIterator.idl \
-	es/util/ISet.idl es/util/ICanvasRenderingContext2D.idl
+	es/util/ISet.idl es/util/ICanvasRenderingContext2D.idl \
+	es/util/IOrderedMap.idl
 
 # Specify nobase_ first when used in conjunction with either dist_ or nodist_.
 nobase_nodist_include_HEADERS = es/base/IAlarm.h es/base/ICache.h \
@@ -195,8 +196,8 @@ nobase_nodist_include_HEADERS = es/base/IAlarm.h es/base/ICache.h \
 	es/naming/IContext.h es/net/IInternetAddress.h \
 	es/net/IInternetConfig.h es/net/IResolver.h es/net/ISocket.h \
 	es/util/IIterator.h es/util/ISet.h \
-	es/util/ICanvasRenderingContext2D.h es/base/IAlarm.ent \
-	es/base/ICache.ent es/base/ICallback.ent \
+	es/util/ICanvasRenderingContext2D.h es/util/IOrderedMap.h \
+	es/base/IAlarm.ent es/base/ICache.ent es/base/ICallback.ent \
 	es/base/IClassFactory.ent es/base/IClassStore.ent \
 	es/base/IFile.ent es/base/IInterface.ent \
 	es/base/IInterfaceStore.ent es/base/IMonitor.ent \
@@ -213,7 +214,8 @@ nobase_nodist_include_HEADERS = es/base/IAlarm.h es/base/ICache.h \
 	es/naming/IBinding.ent es/naming/IContext.ent \
 	es/net/IInternetAddress.ent es/net/IInternetConfig.ent \
 	es/net/IResolver.ent es/net/ISocket.ent es/util/IIterator.ent \
-	es/util/ISet.ent es/util/ICanvasRenderingContext2D.ent
+	es/util/ISet.ent es/util/ICanvasRenderingContext2D.ent \
+	es/util/IOrderedMap.ent
 all: all-am
 
 .SUFFIXES:
