--- a/Makefile.in
+++ b/Makefile.in
@@ -180,6 +180,7 @@ EXTRA_DIST = \
 	patches/newlib-1.16.0.patch \
 	patches/pcre-7.1.patch \
 	patches/pcre-7.2.patch \
+	patches/pcre-7.8.patch \
 	patches/freetype-2.3.4.patch \
 	patches/freetype-2.3.5.patch \
 	patches/expat-2.0.1.patch \
