--- a/os/libes++/Makefile.in
+++ b/os/libes++/Makefile.in
@@ -33,12 +33,14 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
-@ES_TRUE@am__append_1 = src/system.cpp
+@I386_TRUE@am__append_1 = src/variant386.S
+@X86_64_TRUE@am__append_2 = src/variantx64.S
+@ES_TRUE@am__append_3 = src/system.cpp
 
 # libesrpc is built for shared libraries
-@POSIX_TRUE@am__append_2 = libesrpc.a
-@POSIX_TRUE@am__append_3 = -I/usr/include/GL
-@POSIX_TRUE@am__append_4 = src/posix_system.cpp src/posix_video.cpp src/rpc.cpp
+@POSIX_TRUE@am__append_4 = libesrpc.a
+@POSIX_TRUE@am__append_5 = -I/usr/include/GL
+@POSIX_TRUE@am__append_6 = src/posix_system.cpp src/posix_video.cpp src/rpc.cpp
 subdir = libes++
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -64,7 +66,7 @@ am__libes___a_SOURCES_DIST = src/md5.c src/rand48.c src/string.c \
 	src/utf.c src/color.cpp src/context.cpp src/dateTime.cpp \
 	src/dump.cpp src/inet.cpp src/throw.cpp src/formatter.cpp \
 	src/ring.cpp src/apply.cpp src/apply386.S \
-	src/interfaceStore.cpp src/variant.cpp src/variant386.S \
+	src/interfaceStore.cpp src/variant386.S src/variantx64.S \
 	include/core.h include/posix_system.h include/posix_video.h \
 	base/IAlarm.c base/ICache.c base/ICallback.c \
 	base/IClassFactory.c base/IClassStore.c base/IFile.c \
@@ -86,13 +88,14 @@ am__objects_1 = md5.$(OBJEXT) rand48.$(OBJEXT) string.$(OBJEXT) \
 am__objects_2 = color.$(OBJEXT) context.$(OBJEXT) dateTime.$(OBJEXT) \
 	dump.$(OBJEXT) inet.$(OBJEXT) throw.$(OBJEXT) \
 	formatter.$(OBJEXT) ring.$(OBJEXT)
-am__objects_3 = apply.$(OBJEXT) apply386.$(OBJEXT) \
-	interfaceStore.$(OBJEXT) variant.$(OBJEXT) \
-	variant386.$(OBJEXT)
-am__objects_4 =
-am__objects_5 = $(am__objects_1) $(am__objects_2) $(am__objects_3) \
-	$(am__objects_4)
-am__objects_6 = IAlarm.$(OBJEXT) ICache.$(OBJEXT) ICallback.$(OBJEXT) \
+@I386_TRUE@am__objects_3 = variant386.$(OBJEXT)
+@X86_64_TRUE@am__objects_4 = variantx64.$(OBJEXT)
+am__objects_5 = apply.$(OBJEXT) apply386.$(OBJEXT) \
+	interfaceStore.$(OBJEXT) $(am__objects_3) $(am__objects_4)
+am__objects_6 =
+am__objects_7 = $(am__objects_1) $(am__objects_2) $(am__objects_5) \
+	$(am__objects_6)
+am__objects_8 = IAlarm.$(OBJEXT) ICache.$(OBJEXT) ICallback.$(OBJEXT) \
 	IClassFactory.$(OBJEXT) IClassStore.$(OBJEXT) IFile.$(OBJEXT) \
 	IInterface.$(OBJEXT) IInterfaceStore.$(OBJEXT) \
 	IMonitor.$(OBJEXT) IPageable.$(OBJEXT) IPageSet.$(OBJEXT) \
@@ -107,16 +110,16 @@ am__objects_6 = IAlarm.$(OBJEXT) ICache.$(OBJEXT) ICallback.$(OBJEXT) \
 	IResolver.$(OBJEXT) ISocket.$(OBJEXT) IIterator.$(OBJEXT) \
 	ISet.$(OBJEXT) ICanvasRenderingContext2D.$(OBJEXT) \
 	IOrderedMap.$(OBJEXT)
-@ES_TRUE@am__objects_7 = system.$(OBJEXT)
-@POSIX_TRUE@am__objects_8 = posix_system.$(OBJEXT) \
+@ES_TRUE@am__objects_9 = system.$(OBJEXT)
+@POSIX_TRUE@am__objects_10 = posix_system.$(OBJEXT) \
 @POSIX_TRUE@	posix_video.$(OBJEXT) rpc.$(OBJEXT)
-am_libes___a_OBJECTS = $(am__objects_5) $(am__objects_6) \
-	report.$(OBJEXT) $(am__objects_7) $(am__objects_8)
+am_libes___a_OBJECTS = $(am__objects_7) $(am__objects_8) \
+	report.$(OBJEXT) $(am__objects_9) $(am__objects_10)
 libes___a_OBJECTS = $(am_libes___a_OBJECTS)
 libesrpc_a_AR = $(AR) $(ARFLAGS)
 libesrpc_a_LIBADD =
 am__libesrpc_a_SOURCES_DIST = src/apply.cpp src/apply386.S \
-	src/interfaceStore.cpp src/variant.cpp src/variant386.S \
+	src/interfaceStore.cpp src/variant386.S src/variantx64.S \
 	base/IAlarm.c base/ICache.c base/ICallback.c \
 	base/IClassFactory.c base/IClassStore.c base/IFile.c \
 	base/IInterface.c base/IInterfaceStore.c base/IMonitor.c \
@@ -131,11 +134,13 @@ am__libesrpc_a_SOURCES_DIST = src/apply.cpp src/apply386.S \
 	net/IInternetConfig.c net/IResolver.c net/ISocket.c \
 	util/IIterator.c util/ISet.c util/ICanvasRenderingContext2D.c \
 	util/IOrderedMap.c src/rpc.cpp
-am__objects_9 = libesrpc_a-apply.$(OBJEXT) \
+@I386_TRUE@am__objects_11 = libesrpc_a-variant386.$(OBJEXT)
+@X86_64_TRUE@am__objects_12 = libesrpc_a-variantx64.$(OBJEXT)
+am__objects_13 = libesrpc_a-apply.$(OBJEXT) \
 	libesrpc_a-apply386.$(OBJEXT) \
-	libesrpc_a-interfaceStore.$(OBJEXT) \
-	libesrpc_a-variant.$(OBJEXT) libesrpc_a-variant386.$(OBJEXT)
-am__objects_10 = libesrpc_a-IAlarm.$(OBJEXT) \
+	libesrpc_a-interfaceStore.$(OBJEXT) $(am__objects_11) \
+	$(am__objects_12)
+am__objects_14 = libesrpc_a-IAlarm.$(OBJEXT) \
 	libesrpc_a-ICache.$(OBJEXT) libesrpc_a-ICallback.$(OBJEXT) \
 	libesrpc_a-IClassFactory.$(OBJEXT) \
 	libesrpc_a-IClassStore.$(OBJEXT) libesrpc_a-IFile.$(OBJEXT) \
@@ -160,13 +165,19 @@ am__objects_10 = libesrpc_a-IAlarm.$(OBJEXT) \
 	libesrpc_a-IIterator.$(OBJEXT) libesrpc_a-ISet.$(OBJEXT) \
 	libesrpc_a-ICanvasRenderingContext2D.$(OBJEXT) \
 	libesrpc_a-IOrderedMap.$(OBJEXT)
-@POSIX_TRUE@am_libesrpc_a_OBJECTS = $(am__objects_9) $(am__objects_10) \
-@POSIX_TRUE@	libesrpc_a-rpc.$(OBJEXT)
+@POSIX_TRUE@am_libesrpc_a_OBJECTS = $(am__objects_13) \
+@POSIX_TRUE@	$(am__objects_14) libesrpc_a-rpc.$(OBJEXT)
 libesrpc_a_OBJECTS = $(am_libesrpc_a_OBJECTS)
 libessup___a_AR = $(AR) $(ARFLAGS)
 libessup___a_LIBADD =
+am__libessup___a_SOURCES_DIST = src/md5.c src/rand48.c src/string.c \
+	src/utf.c src/color.cpp src/context.cpp src/dateTime.cpp \
+	src/dump.cpp src/inet.cpp src/throw.cpp src/formatter.cpp \
+	src/ring.cpp src/apply.cpp src/apply386.S \
+	src/interfaceStore.cpp src/variant386.S src/variantx64.S \
+	include/core.h include/posix_system.h include/posix_video.h
 am_libessup___a_OBJECTS = $(am__objects_1) $(am__objects_2) \
-	$(am__objects_3) $(am__objects_4)
+	$(am__objects_5) $(am__objects_6)
 nodist_libessup___a_OBJECTS = IAlarm.$(OBJEXT) ICache.$(OBJEXT) \
 	ICallback.$(OBJEXT) IClassFactory.$(OBJEXT) \
 	IClassStore.$(OBJEXT) IFile.$(OBJEXT) IInterface.$(OBJEXT) \
@@ -202,7 +213,8 @@ CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) \
 SOURCES = $(libes___a_SOURCES) $(libesrpc_a_SOURCES) \
 	$(libessup___a_SOURCES) $(nodist_libessup___a_SOURCES)
 DIST_SOURCES = $(am__libes___a_SOURCES_DIST) \
-	$(am__libesrpc_a_SOURCES_DIST) $(libessup___a_SOURCES)
+	$(am__libesrpc_a_SOURCES_DIST) \
+	$(am__libessup___a_SOURCES_DIST)
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	html-recursive info-recursive install-data-recursive \
 	install-dvi-recursive install-exec-recursive \
@@ -319,9 +331,9 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = . testsuite
 SUFFIXES = .ent
-lib_LIBRARIES = libessup++.a libes++.a $(am__append_2)
+lib_LIBRARIES = libessup++.a libes++.a $(am__append_4)
 AM_CPPFLAGS = -I $(srcdir)/include -I- -I../../include \
-	-I$(srcdir)/../../include $(am__append_3)
+	-I$(srcdir)/../../include $(am__append_5)
 c_source_files = \
 	src/md5.c \
 	src/rand48.c \
@@ -338,13 +350,8 @@ cpp_source_files = \
 	src/formatter.cpp \
 	src/ring.cpp
 
-rpc_source_files = \
-	src/apply.cpp \
-	src/apply386.S \
-	src/interfaceStore.cpp \
-	src/variant.cpp \
-	src/variant386.S
-
+rpc_source_files = src/apply.cpp src/apply386.S src/interfaceStore.cpp \
+	$(am__append_1) $(am__append_2)
 header_files = \
 	include/core.h \
 	include/posix_system.h \
@@ -397,8 +404,8 @@ nodist_libessup___a_SOURCES = \
 	util/IOrderedMap.c
 
 libes___a_SOURCES = $(libessup___a_SOURCES) \
-	$(nodist_libessup___a_SOURCES) src/report.cpp $(am__append_1) \
-	$(am__append_4)
+	$(nodist_libessup___a_SOURCES) src/report.cpp $(am__append_3) \
+	$(am__append_6)
 @POSIX_TRUE@libesrpc_a_SOURCES = $(rpc_source_files) $(nodist_libessup___a_SOURCES) src/rpc.cpp
 
 # -fno-exceptions
@@ -580,8 +587,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libesrpc_a-apply386.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libesrpc_a-interfaceStore.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libesrpc_a-rpc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libesrpc_a-variant.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libesrpc_a-variant386.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libesrpc_a-variantx64.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/md5.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/posix_system.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/posix_video.Po@am__quote@
@@ -593,8 +600,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/system.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/throw.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utf.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/variant.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/variant386.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/variantx64.Po@am__quote@
 
 .S.o:
 @am__fastdepCCAS_TRUE@	$(CPPASCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -638,6 +645,20 @@ variant386.obj: src/variant386.S
 @AMDEP_TRUE@@am__fastdepCCAS_FALSE@	DEPDIR=$(DEPDIR) $(CCASDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCCAS_FALSE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -c -o variant386.obj `if test -f 'src/variant386.S'; then $(CYGPATH_W) 'src/variant386.S'; else $(CYGPATH_W) '$(srcdir)/src/variant386.S'; fi`
 
+variantx64.o: src/variantx64.S
+@am__fastdepCCAS_TRUE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -MT variantx64.o -MD -MP -MF $(DEPDIR)/variantx64.Tpo -c -o variantx64.o `test -f 'src/variantx64.S' || echo '$(srcdir)/'`src/variantx64.S
+@am__fastdepCCAS_TRUE@	mv -f $(DEPDIR)/variantx64.Tpo $(DEPDIR)/variantx64.Po
+@AMDEP_TRUE@@am__fastdepCCAS_FALSE@	source='src/variantx64.S' object='variantx64.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCCAS_FALSE@	DEPDIR=$(DEPDIR) $(CCASDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCCAS_FALSE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -c -o variantx64.o `test -f 'src/variantx64.S' || echo '$(srcdir)/'`src/variantx64.S
+
+variantx64.obj: src/variantx64.S
+@am__fastdepCCAS_TRUE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -MT variantx64.obj -MD -MP -MF $(DEPDIR)/variantx64.Tpo -c -o variantx64.obj `if test -f 'src/variantx64.S'; then $(CYGPATH_W) 'src/variantx64.S'; else $(CYGPATH_W) '$(srcdir)/src/variantx64.S'; fi`
+@am__fastdepCCAS_TRUE@	mv -f $(DEPDIR)/variantx64.Tpo $(DEPDIR)/variantx64.Po
+@AMDEP_TRUE@@am__fastdepCCAS_FALSE@	source='src/variantx64.S' object='variantx64.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCCAS_FALSE@	DEPDIR=$(DEPDIR) $(CCASDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCCAS_FALSE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -c -o variantx64.obj `if test -f 'src/variantx64.S'; then $(CYGPATH_W) 'src/variantx64.S'; else $(CYGPATH_W) '$(srcdir)/src/variantx64.S'; fi`
+
 libesrpc_a-apply386.o: src/apply386.S
 @am__fastdepCCAS_TRUE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -MT libesrpc_a-apply386.o -MD -MP -MF $(DEPDIR)/libesrpc_a-apply386.Tpo -c -o libesrpc_a-apply386.o `test -f 'src/apply386.S' || echo '$(srcdir)/'`src/apply386.S
 @am__fastdepCCAS_TRUE@	mv -f $(DEPDIR)/libesrpc_a-apply386.Tpo $(DEPDIR)/libesrpc_a-apply386.Po
@@ -665,6 +686,20 @@ libesrpc_a-variant386.obj: src/variant386.S
 @AMDEP_TRUE@@am__fastdepCCAS_FALSE@	source='src/variant386.S' object='libesrpc_a-variant386.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCCAS_FALSE@	DEPDIR=$(DEPDIR) $(CCASDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCCAS_FALSE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -c -o libesrpc_a-variant386.obj `if test -f 'src/variant386.S'; then $(CYGPATH_W) 'src/variant386.S'; else $(CYGPATH_W) '$(srcdir)/src/variant386.S'; fi`
+
+libesrpc_a-variantx64.o: src/variantx64.S
+@am__fastdepCCAS_TRUE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -MT libesrpc_a-variantx64.o -MD -MP -MF $(DEPDIR)/libesrpc_a-variantx64.Tpo -c -o libesrpc_a-variantx64.o `test -f 'src/variantx64.S' || echo '$(srcdir)/'`src/variantx64.S
+@am__fastdepCCAS_TRUE@	mv -f $(DEPDIR)/libesrpc_a-variantx64.Tpo $(DEPDIR)/libesrpc_a-variantx64.Po
+@AMDEP_TRUE@@am__fastdepCCAS_FALSE@	source='src/variantx64.S' object='libesrpc_a-variantx64.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCCAS_FALSE@	DEPDIR=$(DEPDIR) $(CCASDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCCAS_FALSE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -c -o libesrpc_a-variantx64.o `test -f 'src/variantx64.S' || echo '$(srcdir)/'`src/variantx64.S
+
+libesrpc_a-variantx64.obj: src/variantx64.S
+@am__fastdepCCAS_TRUE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -MT libesrpc_a-variantx64.obj -MD -MP -MF $(DEPDIR)/libesrpc_a-variantx64.Tpo -c -o libesrpc_a-variantx64.obj `if test -f 'src/variantx64.S'; then $(CYGPATH_W) 'src/variantx64.S'; else $(CYGPATH_W) '$(srcdir)/src/variantx64.S'; fi`
+@am__fastdepCCAS_TRUE@	mv -f $(DEPDIR)/libesrpc_a-variantx64.Tpo $(DEPDIR)/libesrpc_a-variantx64.Po
+@AMDEP_TRUE@@am__fastdepCCAS_FALSE@	source='src/variantx64.S' object='libesrpc_a-variantx64.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCCAS_FALSE@	DEPDIR=$(DEPDIR) $(CCASDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCCAS_FALSE@	$(CCAS) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CCASFLAGS) $(CCASFLAGS) -c -o libesrpc_a-variantx64.obj `if test -f 'src/variantx64.S'; then $(CYGPATH_W) 'src/variantx64.S'; else $(CYGPATH_W) '$(srcdir)/src/variantx64.S'; fi`
 
 .c.o:
 @am__fastdepCC_TRUE@	$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -1982,20 +2017,6 @@ interfaceStore.obj: src/interfaceStore.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o interfaceStore.obj `if test -f 'src/interfaceStore.cpp'; then $(CYGPATH_W) 'src/interfaceStore.cpp'; else $(CYGPATH_W) '$(srcdir)/src/interfaceStore.cpp'; fi`
 
-variant.o: src/variant.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT variant.o -MD -MP -MF $(DEPDIR)/variant.Tpo -c -o variant.o `test -f 'src/variant.cpp' || echo '$(srcdir)/'`src/variant.cpp
-@am__fastdepCXX_TRUE@	mv -f $(DEPDIR)/variant.Tpo $(DEPDIR)/variant.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/variant.cpp' object='variant.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o variant.o `test -f 'src/variant.cpp' || echo '$(srcdir)/'`src/variant.cpp
-
-variant.obj: src/variant.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT variant.obj -MD -MP -MF $(DEPDIR)/variant.Tpo -c -o variant.obj `if test -f 'src/variant.cpp'; then $(CYGPATH_W) 'src/variant.cpp'; else $(CYGPATH_W) '$(srcdir)/src/variant.cpp'; fi`
-@am__fastdepCXX_TRUE@	mv -f $(DEPDIR)/variant.Tpo $(DEPDIR)/variant.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/variant.cpp' object='variant.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o variant.obj `if test -f 'src/variant.cpp'; then $(CYGPATH_W) 'src/variant.cpp'; else $(CYGPATH_W) '$(srcdir)/src/variant.cpp'; fi`
-
 report.o: src/report.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT report.o -MD -MP -MF $(DEPDIR)/report.Tpo -c -o report.o `test -f 'src/report.cpp' || echo '$(srcdir)/'`src/report.cpp
 @am__fastdepCXX_TRUE@	mv -f $(DEPDIR)/report.Tpo $(DEPDIR)/report.Po
@@ -2093,20 +2114,6 @@ libesrpc_a-interfaceStore.obj: src/interfaceStore.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/interfaceStore.cpp' object='libesrpc_a-interfaceStore.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libesrpc_a-interfaceStore.obj `if test -f 'src/interfaceStore.cpp'; then $(CYGPATH_W) 'src/interfaceStore.cpp'; else $(CYGPATH_W) '$(srcdir)/src/interfaceStore.cpp'; fi`
-
-libesrpc_a-variant.o: src/variant.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libesrpc_a-variant.o -MD -MP -MF $(DEPDIR)/libesrpc_a-variant.Tpo -c -o libesrpc_a-variant.o `test -f 'src/variant.cpp' || echo '$(srcdir)/'`src/variant.cpp
-@am__fastdepCXX_TRUE@	mv -f $(DEPDIR)/libesrpc_a-variant.Tpo $(DEPDIR)/libesrpc_a-variant.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/variant.cpp' object='libesrpc_a-variant.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libesrpc_a-variant.o `test -f 'src/variant.cpp' || echo '$(srcdir)/'`src/variant.cpp
-
-libesrpc_a-variant.obj: src/variant.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libesrpc_a-variant.obj -MD -MP -MF $(DEPDIR)/libesrpc_a-variant.Tpo -c -o libesrpc_a-variant.obj `if test -f 'src/variant.cpp'; then $(CYGPATH_W) 'src/variant.cpp'; else $(CYGPATH_W) '$(srcdir)/src/variant.cpp'; fi`
-@am__fastdepCXX_TRUE@	mv -f $(DEPDIR)/libesrpc_a-variant.Tpo $(DEPDIR)/libesrpc_a-variant.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/variant.cpp' object='libesrpc_a-variant.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libesrpc_a-variant.obj `if test -f 'src/variant.cpp'; then $(CYGPATH_W) 'src/variant.cpp'; else $(CYGPATH_W) '$(srcdir)/src/variant.cpp'; fi`
 
 libesrpc_a-rpc.o: src/rpc.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libesrpc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libesrpc_a-rpc.o -MD -MP -MF $(DEPDIR)/libesrpc_a-rpc.Tpo -c -o libesrpc_a-rpc.o `test -f 'src/rpc.cpp' || echo '$(srcdir)/'`src/rpc.cpp
