--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -150,20 +150,20 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUFFIXES = .h .idl
-nobase_include_HEADERS = es.h es/apply.h es/broker.h es/color.h \
-	es/collection.h es/context.h es/dateTime.h es/elf.h es/ent.h \
-	es/endian.h es/exception.h es/formatter.h es/handle.h \
-	es/hashtable.h es/interlocked.h es/list.h es/md5.h \
-	es/objectTable.h es/ref.h es/reflect.h es/ring.h es/rpc.h \
-	es/synchronized.h es/timer.h es/timeSpan.h es/tree.h \
-	es/types.h es/usage.h es/utf.h es/uuid.h es/net/arp.h \
-	es/net/dhcp.h es/net/dns.h es/net/dix.h es/net/icmp.h \
-	es/net/igmp.h es/net/inet4.h es/net/inet6.h es/net/tcp.h \
-	es/net/udp.h es/variant.h es/orderedMap.h es/base/IAlarm.idl \
-	es/base/ICache.idl es/base/ICallback.idl es/base/IFile.idl \
-	es/base/IInterface.idl es/base/IInterfaceStore.idl \
-	es/base/IMonitor.idl es/base/IPageable.idl \
-	es/base/IPageSet.idl es/base/IProcess.idl es/base/IRuntime.idl \
+nobase_include_HEADERS = es.h es/broker.h es/color.h es/collection.h \
+	es/context.h es/dateTime.h es/elf.h es/ent.h es/endian.h \
+	es/exception.h es/formatter.h es/handle.h es/hashtable.h \
+	es/interlocked.h es/list.h es/md5.h es/objectTable.h es/ref.h \
+	es/reflect.h es/ring.h es/rpc.h es/synchronized.h es/timer.h \
+	es/timeSpan.h es/tree.h es/types.h es/usage.h es/utf.h \
+	es/uuid.h es/net/arp.h es/net/dhcp.h es/net/dns.h es/net/dix.h \
+	es/net/icmp.h es/net/igmp.h es/net/inet4.h es/net/inet6.h \
+	es/net/tcp.h es/net/udp.h es/variant.h es/orderedMap.h \
+	es/base/IAlarm.idl es/base/ICache.idl es/base/ICallback.idl \
+	es/base/IFile.idl es/base/IInterface.idl \
+	es/base/IInterfaceStore.idl es/base/IMonitor.idl \
+	es/base/IPageable.idl es/base/IPageSet.idl \
+	es/base/IProcess.idl es/base/IRuntime.idl \
 	es/base/ISelectable.idl es/base/IService.idl \
 	es/base/IStream.idl es/base/IThread.idl \
 	es/device/IAudioFormat.idl es/device/IBeep.idl \
